@@ -50,6 +50,7 @@
 * Reworked some condition in hybrid rendering light tracing to solve the problem of flashing caustics (issue #441)
 * Fixed a problem with Blender Translation language preference option and scene export on file
 * Fixed a self-shadow problem in BIRCPU render engine
+* Fixed a Mix material problem when using solid and transparent materials (issue #461)
 
 Check https://wiki.luxcorerender.org/LuxCoreRender_Release_Notes for the full list
 of release notes.
